<resources>
    <string name="app_name">VizeFinalHesaplayici</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">VizeFinalHesaplayici</string>
    <string name="second_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tvInitialText">Please insert your grades to calculate.</string>
    <string name="vizeNotu">Midterm Grade</string>
    <string name="finalNotu">Final Grade</string>
    <string name="vizeCarpani">Midterm Multiplier</string>
    <string name="finalCarpani">Final Multiplier</string>
    <string name="MultiplierOutOfBorder">Please enter a number between 0–100.</string>
    <string name="GradeOutOfBorder">Enter a grade between 0–100.</string>
    <string name="MultiplierSetToast">Multiplier is set successfully.</string>
    <string name="MultiplierSaveError">Please enter valid numbers.</string>
    <string name="invalidNumberError">Please enter a valid number.</string>
    <string name="disclaimer">DISCLAIMER: This app is only for educational purposes. Basic math (default: midterm*0.3+final*0.8) is used for calculating grades. It MAY or MAY NOT calculate grades correctly.</string>
    <string name="saveButton">save button</string>
    <string name="backButton">back button</string>
    <string name="gradeDisplay">Grade: %1$.2f\nGrade letter: %2$s\n</string>
    <string name="gradeA">Congrats on that A.</string>
    <string name="gradeANotPossible">Getting an A is impossible at this moment.</string>
    <string name="gradeNeededForA">To get an A, final grade should be at least: %1$.2f\n</string>
</resources>